--- a/ss_cuda/makefile
+++ b/ss_cuda/makefile
@@ -15,7 +15,7 @@ CUDA_LIB64='/usr/local/cuda/lib64'
 
 OBJECTS = ${OBJ}/mex_cuda.o\
 	  ${OBJ}/mcmc.o\
- 	  ${OBJ}/metropolis.o\
+ 	  ${OBJ}/slicesample.o\
  	  ${OBJ}/p_ratio.o\
 	  ${OBJ}/hash.o\
 	  ${OBJ}/filter.o\
@@ -49,11 +49,11 @@ all: DIR $(OBJECTS)
 ${OBJ}/mex_cuda.o: ${SRC}/mex_cuda.cpp ${OBJ}/link.o
 		$(CXX) -c $(CXX_SWITCH) $(LIB_DIR) $(LIB) $(IDIR) ${SRC}/mex_cuda.cpp -o ${OBJ}/mex_cuda.o
 
-${OBJ}/mcmc.o: ${SRC}/mcmc.cu ${INC}/mcmc.h ${OBJ}/metropolis.o
+${OBJ}/mcmc.o: ${SRC}/mcmc.cu ${INC}/mcmc.h ${OBJ}/slicesample.o
 		${NVCC} -dc ${NVCC_SWITCH} ${LIB_DIR} ${LIB} ${IDIR} ${SRC}/mcmc.cu -o ${OBJ}/mcmc.o
 
-${OBJ}/metropolis.o: ${SRC}/metropolis.cu ${INC}/metropolis.h ${OBJ}/hash.o ${OBJ}/filter.o ${OBJ}/p_ratio.o
-		${NVCC} -dc ${NVCC_SWITCH} ${LIB_DIR} ${LIB} ${IDIR} ${SRC}/metropolis.cu -o ${OBJ}/metropolis.o
+${OBJ}/slicesample.o: ${SRC}/slicesample.cu ${INC}/slicesample.h ${OBJ}/hash.o ${OBJ}/filter.o ${OBJ}/p_ratio.o
+		${NVCC} -dc ${NVCC_SWITCH} ${LIB_DIR} ${LIB} ${IDIR} ${SRC}/slicesample.cu -o ${OBJ}/slicesample.o
 
 ${OBJ}/p_ratio.o: ${SRC}/p_ratio.cu ${INC}/p_ratio.h 
 		${NVCC} -dc ${NVCC_SWITCH} ${LIB_DIR} ${LIB} ${IDIR} ${SRC}/p_ratio.cu -o ${OBJ}/p_ratio.o
@@ -64,8 +64,8 @@ ${OBJ}/hash.o: ${SRC}/hash.cu ${INC}/hash.h
 ${OBJ}/filter.o: ${SRC}/filter.cu ${INC}/filter.h 
 		${NVCC} -dc ${NVCC_SWITCH} ${LIB_DIR} ${LIB} ${IDIR} ${SRC}/filter.cu -o ${OBJ}/filter.o
 		
-${OBJ}/link.o: ${OBJ}/mcmc.o ${OBJ}/metropolis.o ${OBJ}/p_ratio.o ${OBJ}/hash.o ${OBJ}/filter.o	
-		${NVCC} ${NVCC_SWITCH} -dlink ${OBJ}/mcmc.o ${OBJ}/metropolis.o ${OBJ}/p_ratio.o ${OBJ}/hash.o ${OBJ}/filter.o -o ${OBJ}/link.o
+${OBJ}/link.o: ${OBJ}/mcmc.o ${OBJ}/slicesample.o ${OBJ}/p_ratio.o ${OBJ}/hash.o ${OBJ}/filter.o	
+		${NVCC} ${NVCC_SWITCH} -dlink ${OBJ}/mcmc.o ${OBJ}/slicesample.o ${OBJ}/p_ratio.o ${OBJ}/hash.o ${OBJ}/filter.o -o ${OBJ}/link.o
 		
 DIR:
 		mkdir -p $(OBJ) $(DATA)	$(PLOTS)
